[project]
name = "doc-qa-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.2",
    "pydantic>=2.11.7",
]
